* Rewrote mouse hover functions to behave as if the user was navigating with the keyboard. This allows for the same animations, and to avoid using two different background colors (selected and hover) in the list box. (sbox.js, index.css) ! Fixed invisible select boxes in 'Add Rules' page of PM area. (PersonalMessage.template.php)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1378,14 +1378,10 @@ select.sb
 			text-decoration: none
 
 		.selected .item
-			background-color: #eee !important
+			background-color: #eee
 
 		.disabled .item
 			color: #999
-
-		.hover .item
-			background-color: #39f !important
-			color: #fff !important
 
 		// <optgroup> styles
 		.optgroup .label
